добавил В профиле имеется ретвит записи.
Шаги:
1. Открыть профиль, убрать ретвит записи.
2. Проверить, что ретвит был удален с ленты пользователя.
Проверить, что количество твитов обновилось корректно.
Проверить, что запись отображается на странице читаемого пользователя
Проверить на странице читаемого пользователся, что дата публикации записи не изменилась.
Проверить, что количество ретвитов записи изменилось корректно

--- a/build.xml
+++ b/build.xml
@@ -41,7 +41,8 @@
                classpathref="classpath"
                includeantruntime="false"
                debuglevel="lines,vars,source"
-               fork="yes" />
+               fork="yes"
+               encoding="UTF-8"/>
 
         <jar destfile="${jar.dir}${file.separator}Tests.jar" basedir="${bin.dir}"/>
     </target>
